# HydroponicsIDF

./: CMakeLists.txt  README.md  REFACTORING_SUMMARY.md  actuator.md  sdkconfig  sdkconfig.defaults
.github/workflows/: main.yaml
.kiro/specs/calibration-scheme/: .config.kiro  design.md  requirements.md  tasks.md
components/unity_tests/: CMakeLists.txt  test_runtime_safety.c
main/: CMakeLists.txt  actuator_control.c  actuator_control.h  idf_component.yml  indicator_led.c  indicator_led.h  lcd_status.c  lcd_status.h  main.c  mqtt_manager.c  mqtt_manager.h  ota_update.c  ota_update.h  pin_config.h  runtime_safety.c  runtime_safety.h  runtime_tasks.c  runtime_tasks.h  safety_config.h  sensor_calibration_nvs.c  sensor_calibration_nvs.h  sensor_telemetry.c  sensor_telemetry.h  setup_config.c  setup_config.h  web_portal.c  web_portal.h  wifi_manager.c  wifi_manager.h  zone_config.c  zone_config.h
